# api-vendas-rust

./: .env.example  .gitignore  .postgres.env.example  Cargo.toml  docker-compose.yml  docker-compose.yml.example  postgres.env.example
config/: Cargo.toml
config/src/: auth.rs  lib.rs
config/src/mail/: mail_template.rs  mailtutan_mail.rs  mod.rs
modules/customers/: Cargo.toml
modules/customers/src/: lib.rs
modules/customers/src/controllers/: customer_controller.rs
modules/customers/src/entity/: customers.rs  mod.rs  prelude.rs
modules/customers/src/routes/: customers_routes.rs  mod.rs
modules/customers/src/services/: create_customer_service.rs  delete_customer_service.rs  list_customers_service.rs  mod.rs  show_customer_service.rs  update_customer_service.rs
modules/products/: Cargo.toml
modules/products/src/: lib.rs
modules/products/src/controllers/: products_controller.rs
modules/products/src/entity/: mod.rs  prelude.rs  products.rs
modules/products/src/routes/: mod.rs  products_routes.rs
modules/products/src/services/: create_products_service.rs  delete_product_service.rs  list_product_service.rs  mod.rs  show_product_service.rs  update_product_service.rs
modules/users/: Cargo.toml
modules/users/src/: lib.rs
modules/users/src/controllers/: forgot_password_controller.rs  mod.rs  profile_controller.rs  reset_passord_controller.rs  sessions_controller.rs  user_avatar_controller.rs  user_controller.rs
modules/users/src/entity/: mod.rs  prelude.rs  user_tokens.rs  users.rs
modules/users/src/routes/: mod.rs  password.rs  profile.rs  sessions_routes.rs  user_routes.rs
modules/users/src/services/: create_sessions_service.rs  create_user_service.rs  list_user_service.rs  mod.rs  reset_password_service.rs  send_forgot_password_email_service.rs  show_profile_service.rs  update_profile_service.rs  update_user_avatar_service.rs
shared/database/: Cargo.toml
shared/database/src/: lib.rs
shared/errors/: Cargo.toml
shared/errors/src/: api_erro.rs  app_erro.rs  erros.rs  lib.rs
shared/http/: Cargo.toml
shared/http/src/: main.rs
shared/http/src/routes/: mod.rs
shared/middlewares/: Cargo.toml
shared/middlewares/src/: is_authenticated.rs  lib.rs
shared/migration/: Cargo.toml
shared/migration/src/: lib.rs  m20220101_000001_create_products.rs  m20231104_135233_create_users.rs  m20231111_234218_user_tokens.rs  m20231114_055850_create_customers.rs  main.rs
