[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../shared/errors" }
dotenv = "0.15.0"
chrono = "0.4.31"
lettre = { version = "0.11.1", features = ["smtp-transport", "hostname", "builder"]}
axum = "0.6.20"
derive_builder = "0.12.0"