[package]
name = "products"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database ={ path = "../../shared/database" }
errors = { path = "../../shared/errors" }
dotenv = "0.15.0"
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
derive_builder = "0.12.0"
serde = { version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
chrono = "0.4.31"

[dependencies.sea-orm]
version = "0.12.0"
features = [

  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]

