[package]
name = "middlewares"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../errors" }
jsonwebtoken = "9.1.0"
config = { path = "../../config" }
axum = "0.6.20"
serde = { version = "1.0.190", features = ["derive"]}

[dependencies.sea-orm]
version = "0.12.0"
features = [

  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]